--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@ MIT License
     <link rel="stylesheet" href="index.css">
     <script type="text/javascript">
       import "js/util.js"
-      console.log("starting js...");
-      const util = new Util();
-      console.log(util);
+      function start() {
+        console.log("starting js...");
+        const util = new Util();
+        console.log(util);
+      }
+      window.onload = start;
     </script>
   </head>
 <body">
