--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@ MIT License
     <!-- portable Bootstrap cruft for now -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
+    <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript">
-      import "js/util.js"
-      function start() {
-        console.log("starting js...");
-        const util = new Util();
-        console.log(util);
+      window.onload = function(){
+        console.log("testie");
       }
-      window.onload = start;
+      // import "js/util.js"
+      // function start() {
+      //   console.log("starting js...");
+      //   const util = new Util();
+      //   console.log(util);
+      // }
+      // window.onload = start;
     </script>
   </head>
 <body">
