music widget is loading

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ MIT License
             <h2>Hello There!</h2>
               <p>I am Michael D, a CompSci Sophomore. I use this page as a glossary to dump useful links and tips that people may wish to easily reference. If you find this page helpful, or would like to correct information listed here please <a href="mailto:md537@njit.edu">email me</a>.</p>
               <p>I would love the encouragement!</p>
-            <div id="music-widget"></div>
+            <div id="music-widget" class="card"></div>
             <h2>School Links</h2>
               <p>
               <ul>
