--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ MIT License
 -->
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Michael D</title>
     <!-- portable Bootstrap cruft for now -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
