--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ MIT License
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="classes.html">Classes</a>
+        <a class="nav-link" href="https://hackmd.io/@mikeymop">Docs</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="tips.html">Tips</a>
@@ -69,13 +69,13 @@ MIT License
     <div class="column" id="right">
       <div class="container">
         <div class="col-col-md-4">
-          <div class="card">
-            <h2>Hello There!</h2>
-              <p>I am Michael D, a CompSci Sophomore. I use this page as a glossary to dump useful links and tips that people may wish to easily reference. If you find this page helpful, or would like to correct information listed here please <a href="mailto:md537@njit.edu">email me</a>.</p>
-              <p>I would love the encouragement!</p>
+          <div class="card" style="padding:25px;">
+            <h2 class="card-title">Hello There!</h2>
+              <p class="card-text">I am Michael D, a CompSci Senior. I built this page using my own series of es6 modules. I like to dump useful links and tips that people may wish to easily reference. If you find this page helpful, or would like to correct information listed here please <a href="mailto:md537@njit.edu">email me</a>. I would love the encouragement!</p>
+              <p>Using Linux? Unable to connect to NJIT's vpn? Checkout the <a href="https://hackmd.io/@mikeymop/S1DuFYNkB">missing NJIT VPN guide</a></p>
             <div id="music-widget" class="card"></div>
-            <h2>School Links</h2>
-              <p>
+            <div id="project-widget" class="card"></div>
+            <h2 class="card">School Links</h2>
               <ul>
                 <li><a href="https://myhub.njit.edu/StudentRegistrationSsb/ssb/registration">Banner SS</a>
                 <li><a href="https://bnssbpr1.njit.edu/prod/DW_Student.P_SignOn">DegreeWorks</a></li>
