--- a/index.html
+++ b/index.html
@@ -69,18 +69,19 @@ MIT License
     <div class="column" id="right">
       <div class="container">
         <div class="col-col-md-4">
-          <div class="card" style="padding:25px;">
+          <div class="card" style="padding:25px; margin: .8rem;">
             <h2 class="card-title">Hello There!</h2>
               <p class="card-text">I am Michael D, a CompSci Senior. I built this page using my own series of es6 modules. I like to dump useful links and tips that people may wish to easily reference. If you find this page helpful, or would like to correct information listed here please <a href="mailto:md537@njit.edu">email me</a>. I would love the encouragement!</p>
-              <p>Using Linux? Unable to connect to NJIT's vpn? Checkout the <a href="https://hackmd.io/@mikeymop/S1DuFYNkB">missing NJIT VPN guide</a></p>
-            <div id="music-widget" class="card"></div>
-            <div id="project-widget" class="card"></div>
-            <h2 class="card">School Links</h2>
-              <ul>
-                <li><a href="https://myhub.njit.edu/StudentRegistrationSsb/ssb/registration">Banner SS</a>
-                <li><a href="https://bnssbpr1.njit.edu/prod/DW_Student.P_SignOn">DegreeWorks</a></li>
-            <h2>Class Resources</h2>
-            <h2>Help?</h2>
+              <p>Using Linux? Unable to connect to NJIT's vpn? Checkout the missing <a href="https://hackmd.io/@mikeymop/S1DuFYNkB"><u>NJIT VPN guide</u></a></p>
+            <div id="music-widget" class="card" style="padding: 10px; margin: .8rem;"></div>
+            <div id="project-widget" class="card" style="padding: 10px; margin: .8rem;"></div>
+            <div class="card" style="padding: 10px; margin: .8rem;">
+              <h2>School Links</h2>
+                <ul>
+                  <li><a href="https://myhub.njit.edu/StudentRegistrationSsb/ssb/registration">Banner SS</a></li>
+                  <li><a href="https://bnssbpr1.njit.edu/prod/DW_Student.P_SignOn">DegreeWorks</a></li>
+                </ul>
+            </div>
           </div>
         </div>
       </div>
