added presentation link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@ MIT License
         <a class="nav-link" href="https://hackmd.io/@mikeymop">Docs</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="tips.html">Tips</a>
+        <a class="nav-link" href="http://defrances.co/#projects">Projects</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://defrances.co/talk/">Presentations</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
