--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ MIT License
             <h2 class="card-title">Hello There!</h2>
               <p class="card-text">I am Michael D, a CompSci Senior. I built this page using my own series of es6 modules. I like to dump useful links and tips that people may wish to easily reference. If you find this page helpful, or would like to correct information listed here please <a href="mailto:md537@njit.edu">email me</a>. I would love the encouragement!</p>
               <p>Using Linux? Unable to connect to NJIT's vpn? Checkout the missing <a href="https://hackmd.io/@mikeymop/S1DuFYNkB"><u>NJIT VPN guide</u></a></p>
+              <p>For information on how I made this page, see <a href="https://github.com/mikeymop/490profile/">this repo</a>
             <div id="music-widget" class="card" style="padding: 10px; margin: .8rem;"></div>
             <div id="project-widget" class="card" style="padding: 10px; margin: .8rem;"></div>
             <div class="card" style="padding: 10px; margin: .8rem;">
